--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build": "rimraf dist && node scripts/build.js"
   },
   "devDependencies": {
+    "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "esbuild": "^0.23.0",
-    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "lightningcss-cli": "^1.25.1",
     "rimraf": "^6.0.1",
     "stylelint": "^16.6.1",
